--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 #paulmy
+# Built application files
+*.apk
+*.ap_
+*.aab
+
+# Local configuration file (sdk path, etc)
+local.properties
 
 # Gradle files
 .gradle/
@@ -14,3 +21,13 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Version control
+vcs.xml
+
+# lint
+lint/intermediates/
+lint/generated/
+lint/outputs/
+lint/tmp/
+lint/reports/
